--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 p {text-aling: center;
    font-size: 20px; 
+   font-color: red;
 }
 h1 {text-aling: center;
-    font-size: 300px; 
+    font-size: 30px; 
  }
 
