--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 p {text-aling: center;
    font-size: 20px; 
-   font-color: red;
+   color: red;
 }
 h1 {text-aling: center;
     font-size: 30px; 
