--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ p {text-aling: center;
    color: red;
 }
 h1 {text-aling: center;
-    font-size: 30px; 
+    font-size: 30px;
+    color:blue; 
  }
 
