--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-p {text-aling: center;
+p {text-align: center;
    font-size: 20px; 
    color: red;
 }
-h1 {text-aling: center;
+h1 {text-align: center;
     font-size: 30px;
     color:blue; 
  }
