--- a/style.css
+++ b/style.css
@@ -1,10 +1,50 @@
-#texto{text-align: center;
-   font-size: 20px; 
-   color: rgb(255, 179, 0);
-}
-.titulo{text-align: center;
-    font-size: 300px;
-    color:rgb(22, 22, 22); 
-    background-color: aqua;
- }
 
+#banner {
+	width:100%;
+}
+
+.principal{
+	background: #CCCCCC;
+	padding: 30px;
+}
+.titulo_principal {
+	padding-left: 20px;
+	text-align: center;
+	color: #450808;
+}
+
+.titulo_centralizado {
+	text-align: center
+}
+
+p {
+	text-align: center;
+}
+
+#missao {
+	font-size: 20px;
+}
+
+em strong {
+	color: #80191e;
+}
+
+.itens {
+	font-style: italic;
+}
+
+.beneficios {
+	background: #FFFFFF;
+	padding: 20px;
+}
+
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios {
+	width: 50%;
+}
